# Outdoor-Solar-Plant-Watering-System

./: .gitignore  CHANGELOG.md  CMakeLists.txt  FLASHING.md  LICENSE  README.md  docker-compose.yml  partitions.csv  sdkconfig.defaults
.github/workflows/: ci.yml  release.yml
Docs/: plant-waterer-firmware-spec.md
main/: CMakeLists.txt  config.hpp  idf_component.yml  main.cpp
main/drivers/: bts7960_chip.cpp  bts7960_chip.hpp  float_sensor.cpp  float_sensor.hpp  flow_meter.cpp  flow_meter.hpp  ifloat_sensor.hpp  iflow_meter.hpp  ipump_actuator.hpp  irenogy_monitor.hpp  pump_actuator.cpp  pump_actuator.hpp  renogy_data.hpp  renogy_driver.cpp  renogy_driver.hpp  solenoid_actuator.cpp  solenoid_actuator.hpp
main/hal/: esp_adc_channel.cpp  esp_adc_channel.hpp  esp_gpio.cpp  esp_gpio.hpp  esp_pcnt.cpp  esp_pcnt.hpp  esp_uart.cpp  esp_uart.hpp  iadc_channel.hpp  igpio.hpp  ipulse_counter.hpp  ipwm.hpp  iuart.hpp  ledc_pwm.cpp  ledc_pwm.hpp  status_led.cpp  status_led.hpp
main/watering/: fault_code.hpp  izone_manager.hpp  water_usage_tracker.cpp  water_usage_tracker.hpp  watering_fsm.cpp  watering_fsm.hpp  watering_request.hpp  zone_id.hpp  zone_manager.cpp  zone_manager.hpp  zone_status.hpp
main/zb/: attr_echo_suppressor.cpp  attr_echo_suppressor.hpp  zb_device.cpp  zb_device.hpp  zb_handlers.cpp  zb_handlers.hpp
scripts/: repair_z2m_waterer_state.sh  run_host_tests.sh  unity_to_junit.py
test/host/: CMakeLists.txt
test/host/main/: CMakeLists.txt  test_attr_echo_suppressor.cpp  test_bts7960.cpp  test_config.cpp  test_float_sensor.cpp  test_flow_meter.cpp  test_mocks.cpp  test_placeholder.cpp  test_renogy.cpp  test_runner.cpp  test_water_usage_tracker.cpp  test_watering_fsm.cpp  test_zone_manager.cpp
test/mocks/: mock_adc_channel.hpp  mock_float_sensor.hpp  mock_flow_meter.hpp  mock_gpio.hpp  mock_pulse_counter.hpp  mock_pump_actuator.hpp  mock_pwm.hpp  mock_renogy_monitor.hpp  mock_uart.hpp  mock_zone_manager.hpp
zigbee2mqtt/: solar-plant-waterer.mjs
